--- a/index.html
+++ b/index.html
@@ -1,8 +1,9 @@
+
 <!doctype html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="" />
+    <link rel="icon" type="image/svg+xml" href="./src/assets/images/EaseNestLogo.png" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Ease Nest</title>
   </head>
